--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "conqueue"
-version = "0.1.1"
+version = "0.2.0" # ci-verify-version
 authors = ["Jason Longshore <hello@jasonlongshore.com>"]
 edition = "2018"
 keywords = ["queue", "concurrent", "mpsc", "ms", "channel"]
